--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,3 +24,13 @@ jobs:
         with:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ github.repository_owner }}/bitcoind:${{ github.event.inputs.bitcoind_version }} .
+          docker tag ${{ github.repository_owner }}/bitcoind:${{ github.event.inputs.bitcoind_version }} ${{ github.repository_owner }}/bitcoind:latest
+
+      - name: Push Docker Image
+        run: |
+          docker push ${{ github.repository_owner }}/bitcoind:${{ github.event.inputs.bitcoind_version }}
+          docker push ${{ github.repository_owner }}/bitcoind:latest
