chore: update docker

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,15 +22,15 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v3
         with:
-          username: ${{ github.repository_owner }}
+          username: primexz
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ github.repository_owner }}/bitcoind:${{ github.event.inputs.bitcoind_version }} .
-          docker tag ${{ github.repository_owner }}/bitcoind:${{ github.event.inputs.bitcoind_version }} ${{ github.repository_owner }}/bitcoind:latest
+          docker build -t primexz/bitcoind-docker:${{ github.event.inputs.bitcoind_version }} .
+          docker tag primexz/bitcoind-docker:${{ github.event.inputs.bitcoind_version }} primexz/bitcoind:latest
 
       - name: Push Docker Image
         run: |
-          docker push ${{ github.repository_owner }}/bitcoind:${{ github.event.inputs.bitcoind_version }}
-          docker push ${{ github.repository_owner }}/bitcoind:latest
+          docker push primexz/bitcoind-docker:${{ github.event.inputs.bitcoind_version }}
+          docker push primexz/bitcoind-docker:latest
