--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t primexz/bitcoind-docker:${{ github.event.inputs.bitcoind_version }} .
+          docker build --build-arg BTCD_VERSION=${{ github.event.inputs.bitcoind_version }} -t primexz/bitcoind-docker:${{ github.event.inputs.bitcoind_version }} .
           docker tag primexz/bitcoind-docker:${{ github.event.inputs.bitcoind_version }} primexz/bitcoind:latest
 
       - name: Push Docker Image
