--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,9 +35,7 @@ jobs:
           tags: primexz/bitcoind-docker:${{ github.event.inputs.bitcoind_version }},primexz/bitcoind-docker:latest
           build-args: |
             BTCD_VERSION=${{ github.event.inputs.bitcoind_version }}
-          platforms:
-            - linux/amd64
-            - linux/arm64
+          platforms: linux/amd64,linux/arm64
 
       # - name: Build Docker Image
       #   run: |
